--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#352b72" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BiharTechGuide - Your Guide to Engineering Education</title>
+    <meta name="description" content="Discover the best engineering exams, notes, and resources on BiharTechGuide. Find everything you need for your academic success in one place." />
+    <meta name="keywords" content="BiharTechGuide, Engineering Exams, Engineering Notes, Bihar University, Engineering Resources" />
+    <meta property="og:title" content="BiharTechGuide - Your Guide to Engineering Education" />
+    <meta property="og:description" content="Discover the best engineering exams, notes, and resources on BiharTechGuide." />
+    <meta property="og:image" content="https://i.ibb.co/J3KD6FW/Screenshot-209.png" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
