--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#352b72" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover the best engineering exams, notes, and resources on EduNation Hub."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BiharTechGuide - Your Guide to Engineering Education</title>
-    <meta name="description" content="Discover the best engineering exams, notes, and resources on BiharTechGuide. Find everything you need for your academic success in one place." />
-    <meta name="keywords" content="BiharTechGuide, Engineering Exams, Engineering Notes, Bihar University, Engineering Resources" />
-    <meta property="og:title" content="BiharTechGuide - Your Guide to Engineering Education" />
-    <meta property="og:description" content="Discover the best engineering exams, notes, and resources on BiharTechGuide." />
+    <title>EduNation Hub - Your Guide to Engineering Education</title>
+    <meta name="description" content="Discover the best engineering exams, notes, and resources on EduNation Hub. Find everything you need for your academic success in one place." />
+    <meta name="keywords" content="EduNation Hub, Engineering Exams, Engineering Notes, Indian University, Engineering Resources" />
+    <meta property="og:title" content="EduNation Hub - Your Guide to Engineering Education" />
+    <meta property="og:description" content="Discover the best engineering exams, notes, and resources on EduNation Hub." />
     <meta property="og:image" content="https://i.ibb.co/J3KD6FW/Screenshot-209.png" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
