--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <meta name="keywords" content="EduNation Hub, Engineering Exams, Engineering Notes, Indian University, Engineering Resources" />
     <meta property="og:title" content="EduNation Hub - Your Guide to Engineering Education" />
     <meta property="og:description" content="Discover the best engineering exams, notes, and resources on EduNation Hub." />
-    <meta property="og:image" content="https://i.ibb.co/J3KD6FW/Screenshot-209.png" />
+    <meta property="og:image" content="./web_view.png" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
